--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@supabase/supabase-js": "^2.46.1",
     "next": "14.2.14",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
@@ -22,6 +23,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
+    "supabase": "^1.223.10",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
