--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@supabase/supabase-js": "^2.46.1",
+    "easymde": "^2.18.0",
     "next": "14.2.14",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-simplemde-editor": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
