--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@hookform/resolvers": "^3.9.1",
     "@supabase/supabase-js": "^2.46.1",
     "easymde": "^2.18.0",
     "next": "14.2.14",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
     "react-simplemde-editor": "^5.2.0",
     "zod": "^3.24.1"
