--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.1",
     "@supabase/supabase-js": "^2.46.1",
+    "date-fns": "^4.1.0",
     "easymde": "^2.18.0",
     "next": "14.2.14",
     "next-auth": "^5.0.0-beta.25",
